# dapps-student-nft

./: CHANGELOG.md  Cargo.toml  Makefile  build.rs  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/gmeta/: trait.Metadata.js
implementors/parity_scale_codec/codec/: trait.Decode.js  trait.Encode.js
implementors/parity_scale_codec/encode_like/: trait.EncodeLike.js
implementors/scale_info/: trait.TypeInfo.js
io/: Cargo.toml
io/src/: lib.rs
src/: contract.rs
src/student_nft/: contract.rs.html  lib.rs.html
src/student_nft_io/: lib.rs.html
src/student_nft_state/: lib.rs.html
state/: Cargo.toml
state/src/: lib.rs
student_nft/: all.html  constant.WASM_BINARY.html  constant.WASM_BINARY_OPT.html  constant.WASM_METADATA.html  index.html  sidebar-items.js
student_nft/contract/: index.html  sidebar-items.js  struct.Emote.html
student_nft_io/: all.html  enum.EmoteAction.html  enum.StudentNftAction.html  enum.StudentNftEvent.html  index.html  sidebar-items.js  struct.ActualCourse.html  struct.ContractMetadata.html  struct.Course.html  struct.EmoteState.html  struct.Hw.html  struct.Lesson.html  struct.Nft.html  struct.StudentNftInit.html  struct.StudentNftState.html  type.CourseId.html  type.EmoteId.html  type.LessonId.html  type.NftId.html
student_nft_state/: all.html  constant.WASM_BINARY.html  constant.WASM_EXPORTS.html  index.html  sidebar-items.js
student_nft_state/metafns/: fn.get_courses.html  fn.get_emotes.html  fn.get_nft_owners.html  fn.get_nfts.html  index.html  sidebar-items.js  type.State.html
tests/: mint.rs  node_tests.rs  update_admin.rs  update_metadata.rs
tests/utils/: student_nft.rs
tests/utils_gclient/: common.rs  student_nft.rs
